[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "ltoolz"
version = "0.0.1"
authors = [
  { name="chfouro" },
]
description = "Common tool packaging"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
requires = [
  "bs4",
  
]
