[project]
name = "ltoolx"
version = "0.1.4"
description = "Common tool packaging"
readme = "README.md"
requires-python = ">=3.12"

authors = [
  { name = "jchl" },
]

license = { file = "LICENSE" }

dependencies = [
  "numpy>=2.2.3,<3.0.0",
  "matplotlib>=3.10.0,<4.0.0",
  "lxml>=5.3.1,<6.0.0",
  "beautifulsoup4>=4.13.3,<5.0.0",
  "pywin32>=223,<224",
  "matplotlib-inline>=0.1.7,<0.2.0",
  "ipython>=8.32.0,<9.0.0",
  "gurobipy>11",
]

[project.urls]
Homepage = "https://github.com/jchliao/ltoolx"
Repository = "https://github.com/jchliao/ltoolx"

# 如果未来有命令行入口，可以在这里加：
# [project.scripts]
# ltoolx = "ltoolx.cli:main"

[tool.uv]
dev-dependencies = [
  "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
